# froyo

./: .travis.yml  API.md  Cargo.toml  FORMAT.md  README.md  build.rs
src/: blockdev.rs  consts.rs  dbus_api.rs  dmdevice.rs  froyo.rs  main.rs  mirror.rs  raid.rs  serialize.rs  serialize.rs.in  thin.rs  types.rs  util.rs
